fix: fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,9 @@ body {
 .App
 {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
 }
 .splash-container
@@ -77,7 +79,9 @@ header{
   background-color: #212529;
   margin: auto ;
   position: relative;
-  padding: 10px 0;
+  padding: 5px 0;
+  min-width: 100vw;
+
 }
 
 
